--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,17 @@
     <string name="connexion">Connexion</string>
     <string name="privacy">Politique de confidentialité</string>
     <string name="s_inscrire">S\'inscrire</string>
+    <string name="espace_client">Espace client</string>
+    <string name="d_j_inscrire">Déjà inscrire ?</string>
+    <string name="se_connecter">Se connecter</string>
+    <string name="espace_pharmacie">Espace Pharmacie</string>
+    <string name="bienvenu">Bienvenu</string>
+    <string name="nom">Nom</string>
+    <string name="Tele">Numéro de téléphone</string>
+    <string name="mot_de_passe">Mot de passe</string>
+    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
+    <string name="valider">Valider</string>
+    <string name="ville">Ville</string>
+    <string name="nord">Nord</string>
+    <string name="sud">Sud</string>
 </resources>
