--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,22 @@
     <string name="bienvenu">Bienvenu</string>
     <string name="nom">Nom</string>
     <string name="Tele">Numéro de téléphone</string>
-    <string name="mot_de_passe">Mot de passe</string>
     <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
     <string name="valider">Valider</string>
     <string name="ville">Ville</string>
     <string name="nord">Nord</string>
     <string name="sud">Sud</string>
+    <string name="email_empty">Email est vide</string>
+    <string name="email_error">Email est invalid</string>
+    <string name="name_empty">le nom ne doit pas etre vide</string>
+    <string name="tel_empty">téléphone est obligé</string>
+    <string name="password_empty">entrer le mot de passe</string>
+    <string name="password_incorect">confirmer le mot de passe</string>
+    <string name="password_small">"le mot de passe est faible "</string>
+    <string name="userCreate">l\'utilisateur est créer avec succé</string>
+    <string name="latitude_empty">latitude es obligé</string>
+    <string name="longitude_empty">entrer longitude</string>
+    <string name="ville_empty">entrer la ville</string>
+
+
 </resources>
