--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
-    <string name="app_name">BiGBeD Pharmacie</string>
+    <string name="app_name">BiGBeD-Pharmacie</string>
     <string name="email">Email</string>
     <string name="mot_de_passe">Mot de passe</string>
     <string name="m_moriser">Mémoriser</string>
-    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
-    <string name="connexion">Connexion</string>
+    <string name="mot_de_passe_oubli">Mot de passe oublié !</string>
+    <string name="connexion">Se connecter</string>
     <string name="privacy">Politique de confidentialité</string>
-    <string name="s_inscrire">S\'inscrire</string>
+    <string name="s_inscrire">Inscrire</string>
     <string name="espace_client">Espace client</string>
-    <string name="d_j_inscrire">Déjà inscrire ?</string>
+    <string name="d_j_inscrire">Déjà inscrit ?</string>
     <string name="se_connecter">Se connecter</string>
     <string name="espace_pharmacie">Espace Pharmacie</string>
-    <string name="bienvenu">Bienvenu</string>
+    <string name="bienvenu">Bienvenue</string>
     <string name="nom">Nom</string>
     <string name="Tele">Numéro de téléphone</string>
     <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
