--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
     <string name="valider">Valider</string>
     <string name="ville">Ville</string>
-    <string name="nord">Nord</string>
-    <string name="sud">Sud</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Latitude</string>
     <string name="email_empty">Email est vide</string>
     <string name="email_error">Email est invalid</string>
     <string name="name_empty">le nom ne doit pas etre vide</string>
@@ -31,6 +31,9 @@
     <string name="longitude_empty">entrer longitude</string>
     <string name="ville_empty">entrer la ville</string>
     <string name="message_error_auth">Email ou mot de passe est incorrect ? </string>
+    <string name="entrer_votre_email">entrer votre email</string>
+    <string name="avoir_un_nouveau_mot_de_passe">entrer votre email pour avoir un nouveau mot de passe</string>
+    <string name="envoyer">Envoyer</string>
 
 
 </resources>
