--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="email">Email</string>
     <string name="mot_de_passe">Mot de passe</string>
     <string name="m_moriser">Mémoriser</string>
-    <string name="mot_de_passe_oubli">Mot de passe oublié !</string>
+    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
     <string name="connexion">Se connecter</string>
     <string name="privacy">Politique de confidentialité</string>
     <string name="s_inscrire">Inscrire</string>
@@ -19,26 +19,26 @@
     <string name="ville">Ville</string>
     <string name="longitude">Longitude</string>
     <string name="latitude">Latitude</string>
-    <string name="email_empty">Email est vide</string>
-    <string name="email_error">Email est invalid</string>
-    <string name="name_empty">le nom ne doit pas etre vide</string>
-    <string name="tel_empty">téléphone est obligé</string>
-    <string name="password_empty">entrer le mot de passe</string>
-    <string name="password_incorect">confirmer le mot de passe</string>
-    <string name="password_small">"le mot de passe est faible "</string>
-    <string name="userCreate">l\'utilisateur est créer avec succé</string>
-    <string name="latitude_empty">latitude es obligé</string>
-    <string name="longitude_empty">entrer longitude</string>
-    <string name="ville_empty">entrer la ville</string>
-    <string name="message_error_auth">Email ou mot de passe est incorrect ? </string>
-    <string name="entrer_votre_email">entrer votre email</string>
-    <string name="avoir_un_nouveau_mot_de_passe">entrer votre email pour avoir un nouveau mot de passe</string>
+    <string name="email_empty">Remplissez votre Email !</string>
+    <string name="email_error">Email est invalide !</string>
+    <string name="name_empty">Remplissez votre nom !</string>
+    <string name="tel_empty">N° Téléphone est obligatoire !</string>
+    <string name="password_empty">Entrez votre mot de passe !</string>
+    <string name="password_incorect">Confirmer le mot de passe</string>
+    <string name="password_small">"Mot de passe est faible ! "</string>
+    <string name="userCreate">Inscription réussite</string>
+    <string name="latitude_empty">Latitude est obligatoire</string>
+    <string name="longitude_empty">Entrer longitude</string>
+    <string name="ville_empty">Entrer la ville</string>
+    <string name="message_error_auth">Email ou mot de passe est incorrect ! </string>
+    <string name="entrer_votre_email">Entrer votre Email</string>
+    <string name="avoir_un_nouveau_mot_de_passe">Entrer votre Email pour un nouveau mot de passe</string>
     <string name="envoyer">Envoyer</string>
-    <string name="language">Language</string>
+    <string name="language">Langage</string>
     <string name="qui_somme_nous">Qui Somme Nous</string>
-    <string name="messanger">Messanger</string>
+    <string name="messanger">Message</string>
     <string name="ajouter_un_service">Ajouter un service</string>
-    <string name="status">Status</string>
+    <string name="status">Statut</string>
 
 
 </resources>
