--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,15 @@
     <string name="l_agence_est_fermer">La pharmacie est fermée à ce moment</string>
     <string name="l_agence_est_ouvert">La pharmacie est ouvert à ce moment</string>
     <string name="ajouter_un_m_dicament">Ajouter un médicament</string>
+    <string name="message_update">Votre status est update</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="log_out">Log out</string>
+    <string name="profile">Profile</string>
+    <string name="help">help</string>
+    <string name="share">Share</string>
 
 </resources>
