--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,4 +65,8 @@
     <string name="profile">Profile</string>
     <string name="active">Active</string>
     <string name="inactive">Inactive</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="menu_home">Home</string>
+    <string name="search_for_medicament">Search for medicament</string>
 </resources>
