--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,13 +63,13 @@
     <string name="profile">Profile</string>
     <string name="help">help</string>
     <string name="share">Share</string>
+    <string name="active">Active</string>
+    <string name="inactive">Inactive</string>
     <string name="title_activity_main2">MainActivity</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="active">Active</string>
-    <string name="inactive">Inactive</string>
+    <string name="search_for_medicament">Search for medicament</string>
 
 </resources>
