--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,4 +69,6 @@
     <string name="action_settings">Settings</string>
     <string name="menu_home">Home</string>
     <string name="search_for_medicament">Search for medicament</string>
+    <string name="service_d_assistance">Si vous avez besoin d\'aide, contactez notre service d\'assistance</string>
+    <string name="tele">0622505912</string>
 </resources>
