the app is almost ready

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,26 +4,26 @@
     <string name="email">"E-mail  "</string>
     <string name="mot_de_passe">"Password  "</string>
     <string name="m_moriser">"Memorize  "</string>
-    <string name="mot_de_passe_oubli">"Forgot your password ?  "</string>
-    <string name="connexion">"Log in  "</string>
+    <string name="mot_de_passe_oubli">"Forgot password ?  "</string>
+    <string name="connexion">"Login  "</string>
     <string name="privacy">"Privacy Policy "</string>
     <string name="s_inscrire">"Register  "</string>
     <string name="espace_client">"Client area  "</string>
     <string name="d_j_inscrire">Already registered ?</string>
-    <string name="se_connecter">Log in</string>
+    <string name="se_connecter">Login</string>
     <string name="espace_pharmacie">"Pharmacy area "</string>
     <string name="bienvenu">Welcome</string>
-    <string name="nom">Last name</string>
+    <string name="nom">Full name</string>
     <string name="Tele">Phone number</string>
     <string name="confirmer_le_mot_de_passe">Confirm password</string>
     <string name="valider">Validate</string>
     <string name="ville">City</string>
-    <string name="email_empty">Fill in your E-mail</string>
+    <string name="email_empty">Enter an E-mail</string>
     <string name="email_error">E-mail is invalid !</string>
-    <string name="name_empty">Fill in your name !</string>
-    <string name="tel_empty">Phone number is required !</string>
+    <string name="name_empty">Enter your name !</string>
+    <string name="tel_empty">Enter phone number !</string>
     <string name="password_empty">Enter your password !</string>
-    <string name="password_incorect">"Confirm your password "</string>
+    <string name="password_incorect">"Confirm password "</string>
     <string name="password_small">Password is weak !</string>
     <string name="userCreate">"Success registration  "</string>
     <string name="latitude_empty">"Latitude is required "</string>
@@ -34,12 +34,11 @@
     <string name="envoyer">Send</string>
     <string name="language">Language</string>
     <string name="qui_somme_nous">"About us "</string>
-    <string name="messanger">Message</string>
     <string name="ajouter_un_service">Add a service</string>
     <string name="status">Status</string>
     <string name="fermer">Closed</string>
     <string name="ouvert">Open</string>
-    <string name="message_pour_pharmacie">Please don\'t forget to click closed when the pharmacy is not available!</string>
+    <string name="message_pour_pharmacie">Please don\'t forget to click on closed when the pharmacy is not available!</string>
     <string name="merci">Thank you.</string>
     <string name="l_agence_est_fermer">The pharmacy is closed at this time</string>
     <string name="l_agence_est_ouvert">The pharmacy is open at this time</string>
@@ -47,11 +46,11 @@
     <string name="description">Description ...</string>
     <string name="ajouter">Add</string>
     <!-- -->
-    <string name="longitude_empty">Enter longitude</string>
+    <string name="longitude_empty">Enter a longitude</string>
     <string name="service_ajouter">The service is added successfully</string>
     <string name="medicament_ajouter">The Medicament is added successfully</string>
-    <string name="medicamen_empty">"Enter medication "</string>
-    <string name="Description_empty">"Enter Description "</string>
+    <string name="medicamen_empty">"Enter medication !"</string>
+    <string name="Description_empty">"Enter Description !"</string>
     <string name="service_empty">"Enter the service "</string>
     <string name="message_update">Your status is updated</string>
     <string name="help">help</string>
@@ -61,19 +60,31 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="log_out">Log out</string>
+    <string name="log_out">Logout</string>
     <string name="profile">Profile</string>
-    <string name="active">Active</string>
-    <string name="inactive">Inactive</string>
+    <string name="active">Open</string>
+    <string name="inactive">Closed</string>
     <string name="title_activity_main2">Profile Client</string>
     <string name="action_settings">Settings</string>
     <string name="menu_home">Home</string>
     <string name="search_for_medicament">Search for medicament</string>
-    <string name="service_d_assistance">If you need help, contact our Support Department.</string>
+    <string name="service_d_assistance">If you need help, please contact our Support Department.</string>
     <string name="tele">0622505912</string>
-    <string name="verify_your_email">verifiy votre Email address</string>
+    <string name="verify_your_email">verify your Email address</string>
     <string name="email_invalid">address email est invalid</string>
-    <string name="error">Erreur !!</string>
+    <string name="error">Error !!</string>
     <string name="medicament">Medicament</string>
     <string name="service">Service</string>
+    <string name="bienautentifi">Successful authentication</string>
+    <string name="latitudedisplay">latitude :</string>
+    <string name="longitudedesplay">Longitude :</string>
+    <string name="update_service_and_medicament">update Service and Medicament</string>
+    <string name="update_profile">update profile</string>
+    <string name="nomdisplay">Nam :</string>
+    <string name="telephonedesplay">Telephone :</string>
+    <string name="villedesplay">City :</string>
+    <string name="emaildesplay">Email :</string>
+    <string name="update">Update</string>
+    <string name="update_profile_message">Your profile update with success</string>
+    <string name="update_profile_message_error">Error</string>
 </resources>
