--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="deleting">Suppression</string>
     <string name="no">Non</string>
     <string name="there_no_item">Il n\'y a pas d\'itme lié à votre recherche</string>
+    <string name="url_privacy">https://sites.google.com/view/bigbedpharmacy/home</string>
 
 
 </resources>
