--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -93,4 +93,5 @@
     <string name="deleting">Deleting</string>
     <string name="no">No</string>
     <string name="there_no_item">There is no itme related to your search</string>
+    <string name="url_privacy">https://sites.google.com/view/bigbedpharmacy/home</string>
 </resources>
